package dat.backend.model.entities;

public abstract class ExtraDimensionMaterial {
    private int width;
    private int height;

    public ExtraDimensionMaterial(int width, int height) {
        this.width = width;
        this.height = height;
    }
}
