package dat.backend.model.entities;

public class Fitting extends ExtraDimensionMaterial {

    public Fitting(int width, int height) {
        super(width, height);
    }
}
