package dat.backend.model.entities;

public class ScrewPack extends ExtraDiameterMaterial{

    public ScrewPack(int diameter) {
        super(diameter);
    }
}
